REALLY fix z-index

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -1,6 +1,6 @@
 /*snipcart change*/
 .snipcart-modal__container {
-  z-index: 150;
+  z-index: 150 important;
 }
 
 /* Stygian Generator */
